welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: not found: value setPosition
  faireLigne(); recule(6); gauche(); avance(2); droite(); faireLigne(); setPosition(4,3)
                                                                        ^